[package]
name = "rust-slack-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
env_logger = "0.10.1"
handlebars = "4.5.0"
tokio = { version = "1", features = ["full"] }
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["json"] }
tungstenite = { version = "0.20.1", features = ["native-tls"] }
sea-orm = "0.12.6"
